--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Maybe one day this will actually look decent</p>
     <p>The question is do you think there is enough pink?</p>
 
-    <img src="https://cdn.imgbin.com/0/15/19/imgbin-kitten-ragdoll-whiskers-drawing-tail-kitten-eGU8SZNS6nAEwZKqt9w9U4zp0.jpg" alt="Car" width="500px" style="vertical-align:middle;margin:10px 30px; border-radius: 50px;">
+    <img src="https://rimefrost.io/assets/images/gallery05/703c7d0a_original.png?v=bb5bf08c" alt="EmsiHa Logo" width="500px" style="vertical-align:middle;margin:10px 30px; border-radius: 50px;">
 	
     <script src="index.js"></script>
   </body>
