--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>I can't code (yet)</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./https://rimefrost.io/assets/images/gallery05/703c7d0a_original.png?v=bb5bf08c" type="image/x-icon">
   </head>
   <body style="background-color: pink; color: white; text-align: center; font-family: 'Courier New', Courier, monospace; font-size: large;">
     <main>
