Added favicon and site title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>I can't code (yet)</title>
+    <title>Oh no you found it</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="https://rimefrost.io/assets/images/gallery05/703c7d0a_original.png?v=bb5bf08c" type="image/x-icon">
   </head>
